--- a/package.json
+++ b/package.json
@@ -14,11 +14,30 @@
   "author": "iwamoto",
   "license": "ISC",
   "devDependencies": {
+    "@types/react": "^16.3.5",
+    "@types/react-dom": "^16.0.4",
+    "@types/react-redux": "^5.0.15",
+    "@types/redux-logger": "^3.0.5",
+    "@types/ws": "^4.0.1",
     "awesome-typescript-loader": "^3.4.1",
+    "concurrently": "^3.5.1",
+    "css-loader": "^0.28.10",
+    "node-sass": "^4.8.3",
+    "sass-loader": "^7.0.1",
     "source-map-loader": "^0.2.3",
+    "style-loader": "^0.20.2",
     "tslint": "^5.9.1",
     "typescript": "^2.7.1",
+    "typings-for-css-modules-loader": "^1.7.0",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1"
+  },
+  "dependencies": {
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "ws": "^4.1.0"
   }
 }
