クライアントをReact+Reduxで実装中

--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "description": "",
   "main": "",
   "scripts": {
-    "build_client": "webpack --config client/webpack.config.js",
+    "build:client": "webpack --config client/webpack.config.js",
     "web": "webpack-dev-server --config client/webpack.config.js",
-    "build_client_watch": "webpack --watch --config client/webpack.config.js",
-    "build_server": "webpack --config server/webpack.config.js",
-    "build_server_watch": "webpack --watch --config server/webpack.config.js",
-    "server": "node server/build/server.js"
+    "build:client:watch": "webpack --watch --config client/webpack.config.js",
+    "build:server": "webpack --config server/webpack.config.js",
+    "build:server:watch": "webpack --watch --config server/webpack.config.js",
+    "server": "node server/build/server.js",
+    "test:client": "karma start client/karma.conf.js",
+    "test:client:all": "karma start client/karma.conf.js client/**/*.spec.tsx client/**/*.spec.ts"
   },
   "author": "iwamoto",
   "license": "ISC",
   "devDependencies": {
+    "@types/jasmine": "^2.8.6",
     "@types/react": "^16.3.5",
     "@types/react-dom": "^16.0.4",
     "@types/react-redux": "^5.0.15",
@@ -22,10 +25,17 @@
     "awesome-typescript-loader": "^3.4.1",
     "concurrently": "^3.5.1",
     "css-loader": "^0.28.10",
+    "jasmine-core": "^3.1.0",
+    "karma": "^2.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^1.1.1",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-webpack": "^3.0.0",
     "node-sass": "^4.8.3",
     "sass-loader": "^7.0.1",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.20.2",
+    "ts-loader": "^4.2.0",
     "tslint": "^5.9.1",
     "typescript": "^2.7.1",
     "typings-for-css-modules-loader": "^1.7.0",
