--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "build:server": "webpack --config server/webpack.config.js",
     "build:server:watch": "webpack --watch --config server/webpack.config.js",
     "server": "node server/build/server.js",
-    "test:client": "karma start client/karma.conf.js",
-    "test:client:all": "karma start client/karma.conf.js client/**/*.spec.tsx client/**/*.spec.ts"
+    "test:client": "karma start karma.conf.js --basePath client",
+    "test:server": "karma start karma.conf.js --basePath server",
+    "test:lib": "karma start karma.conf.js --basePath lib"
   },
   "author": "iwamoto",
   "license": "ISC",
@@ -22,7 +23,6 @@
     "@types/react-redux": "^5.0.15",
     "@types/redux-logger": "^3.0.5",
     "@types/ws": "^4.0.1",
-    "awesome-typescript-loader": "^3.4.1",
     "concurrently": "^3.5.1",
     "css-loader": "^0.28.10",
     "jasmine-core": "^3.1.0",
@@ -39,8 +39,9 @@
     "tslint": "^5.9.1",
     "typescript": "^2.7.1",
     "typings-for-css-modules-loader": "^1.7.0",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.1"
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
     "react": "^16.3.1",
