--- a/package.json
+++ b/package.json
@@ -17,35 +17,37 @@
   "author": "iwamoto",
   "license": "ISC",
   "devDependencies": {
-    "@types/jasmine": "^2.8.6",
-    "@types/react": "^16.3.5",
-    "@types/react-dom": "^16.0.4",
-    "@types/react-redux": "^5.0.15",
-    "@types/redux-logger": "^3.0.5",
-    "@types/ws": "^4.0.1",
-    "concurrently": "^3.5.1",
-    "css-loader": "^0.28.10",
-    "jasmine-core": "^3.1.0",
-    "karma": "^2.0.0",
+    "@types/jasmine": "^2.8.8",
+    "@types/react": "^16.4.13",
+    "@types/react-dom": "^16.0.7",
+    "@types/react-redux": "^5.0.21",
+    "@types/redux-logger": "^3.0.6",
+    "@types/ws": "^4.0.2",
+    "concurrently": "^3.6.1",
+    "css-loader": "^0.28.11",
+    "jasmine-core": "^3.2.1",
+    "karma": "^2.0.5",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-jasmine": "^1.1.1",
+    "karma-jasmine": "^1.1.2",
     "karma-mocha-reporter": "^2.2.5",
-    "karma-webpack": "^3.0.0",
-    "node-sass": "^4.8.3",
-    "sass-loader": "^7.0.1",
-    "source-map-loader": "^0.2.3",
-    "style-loader": "^0.20.2",
-    "ts-loader": "^4.2.0",
-    "tslint": "^5.9.1",
-    "typescript": "^2.7.1",
+    "karma-webpack": "^3.0.1",
+    "node-sass": "^4.9.3",
+    "sass-loader": "^7.1.0",
+    "source-map-loader": "^0.2.4",
+    "style-loader": "^0.20.3",
+    "ts-loader": "^4.5.0",
+    "tslint": "^5.11.0",
+    "typescript": "^2.9.2",
     "typings-for-css-modules-loader": "^1.7.0",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^3.1.3"
+    "webpack": "^4.17.1",
+    "webpack-cli": "^2.1.5",
+    "webpack-dev-server": "^3.1.7"
   },
   "dependencies": {
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
+    "@material-ui/core": "^3.0.1",
+    "@material-ui/icons": "^3.0.1",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
