--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^16.4.13",
     "@types/react-dom": "^16.0.7",
     "@types/react-redux": "^5.0.21",
+    "@types/react-transition-group": "^2.0.13",
     "@types/redux-logger": "^3.0.6",
     "@types/ws": "^4.0.2",
     "concurrently": "^3.6.1",
@@ -49,6 +50,7 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
+    "react-transition-group": "^2.4.0",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "ws": "^4.1.0"
