--- a/package.json
+++ b/package.json
@@ -17,21 +17,24 @@
   "author": "iwamoto",
   "license": "ISC",
   "devDependencies": {
+    "@types/body-parser": "^1.17.0",
+    "@types/express": "^4.16.0",
     "@types/jasmine": "^2.8.8",
     "@types/react": "^16.4.13",
     "@types/react-dom": "^16.0.7",
     "@types/react-redux": "^5.0.21",
     "@types/react-transition-group": "^2.0.13",
     "@types/redux-logger": "^3.0.6",
+    "@types/superagent": "^3.8.4",
     "@types/ws": "^4.0.2",
     "concurrently": "^3.6.1",
     "css-loader": "^0.28.11",
     "jasmine-core": "^3.2.1",
-    "karma": "^2.0.5",
+    "karma": "^3.0.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-jasmine": "^1.1.2",
     "karma-mocha-reporter": "^2.2.5",
-    "karma-webpack": "^3.0.1",
+    "karma-webpack": "^3.0.4",
     "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.4",
@@ -42,17 +45,20 @@
     "typings-for-css-modules-loader": "^1.7.0",
     "webpack": "^4.17.1",
     "webpack-cli": "^2.1.5",
-    "webpack-dev-server": "^3.1.7"
+    "webpack-dev-server": "^3.1.7",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
     "@material-ui/core": "^3.0.1",
     "@material-ui/icons": "^3.0.1",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
     "react-transition-group": "^2.4.0",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
-    "ws": "^4.1.0"
+    "superagent": "^3.8.3"
   }
 }
