--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "style-loader": "^0.20.3",
     "ts-loader": "^4.5.0",
     "tslint": "^5.11.0",
+    "tslint-config-standard": "^8.0.1",
     "typescript": "^2.9.2",
     "typings-for-css-modules-loader": "^1.7.0",
     "webpack": "^4.17.1",
